# sqlite-diff-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  REPORT.md  codecov.yml
.cargo-husky/hooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: asan.yml  audit.yml  ci.yml  coverage.yml  deploy-demo.yml  fuzz.yml  release.yml
benches/: apply_benchmark.rs  builder_vs_rusqlite.rs  builder_vs_rusqlite_old.rs  debezium_benchmark.rs  maxwell_benchmark.rs  pg_walstream_benchmark.rs  wal2json_benchmark.rs
compile-bench/: Cargo.toml  README.md  bench.sh
compile-bench/src/: lib.rs
docs/: schema-aware-forward-conversion.md
examples/web-demo/: Cargo.toml  Dioxus.toml  README.md
examples/web-demo/assets/: styles.css
examples/web-demo/src/: db.rs  inspector.rs  main.rs  rtc.rs  schema.rs  signal.rs  wire.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: apply_roundtrip.rs  debezium.rs  differential.rs  maxwell.rs  pg_walstream.rs  reverse_idempotent.rs  roundtrip.rs  sql_roundtrip.rs  wal2json.rs  wire_maxwell.rs  wire_pg_walstream.rs  wire_wal2json.rs
integration-tests/: Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml
integration-tests/apply-bench-report/: Cargo.toml
integration-tests/apply-bench-report/plots/: report.md
integration-tests/apply-bench-report/src/: data.rs  main.rs  markdown.rs  plots.rs
integration-tests/backend/: Cargo.toml
integration-tests/backend/src/: lib.rs  main.rs  state.rs  ws.rs
integration-tests/backend/tests/: ws_integration.rs
integration-tests/diesel-e2e/: Cargo.toml
integration-tests/diesel-e2e/src/: lib.rs
integration-tests/diesel-e2e/tests/: mysql_async_e2e.rs  mysql_e2e.rs  postgres_async_e2e.rs  postgres_e2e.rs  sqlite_async_e2e.rs  sqlite_e2e.rs
integration-tests/frontend/: Cargo.toml  Trunk.toml  index.html
integration-tests/frontend/src/: db.rs  main.rs  session.rs  websocket.rs
integration-tests/frontend/tests/: wasm.rs
integration-tests/payload-size-bench/: Cargo.toml  README.md
integration-tests/payload-size-bench/data/: dataset.csv
integration-tests/payload-size-bench/plots/: results.json
integration-tests/payload-size-bench/src/: binary_serde.rs  common.rs  format_cbor.rs  format_changeset.rs  format_json.rs  format_msgpack.rs  format_patchset.rs  format_protobuf.rs  format_sql.rs  main.rs  plots.rs  results.rs
integration-tests/pg-walstream/: Cargo.toml
integration-tests/pg-walstream/src/: lib.rs
integration-tests/pg-walstream/tests/: conversion_tests.rs
integration-tests/schema-aware-roundtrip/: Cargo.toml
integration-tests/schema-aware-roundtrip/src/: lib.rs
integration-tests/schema-aware-roundtrip/tests/: pg_walstream_roundtrip.rs  wal2json_roundtrip.rs
integration-tests/shared/: Cargo.toml
integration-tests/shared/src/: ddl.rs  lib.rs  schema.rs
integration-tests/wal2json/: Cargo.toml
integration-tests/wal2json/src/: lib.rs
integration-tests/wal2json/tests/: postgres_integration.rs
src/: builders.rs  debezium.rs  differential_testing.rs  encoding.rs  errors.rs  lib.rs  maxwell.rs  parser.rs  pg_walstream.rs  pg_walstream_reverse.rs  schema.rs  testing.rs  wal2json.rs  wire.rs
src/builders/: ast_helpers.rs  change.rs  delete_operation.rs  diesel_async_query.rs  diesel_query.rs  format.rs  insert_operation.rs  operation.rs  simple_table_impl.rs  sql.rs  sql_output.rs  update_operation.rs  view.rs
src/builders/sql/: lexer.rs  parser.rs
src/encoding/: constants.rs  serial.rs  varint.rs
src/encoding/serial/: display.rs  simple_sql.rs  sqlparser.rs
src/schema/: dyn_table.rs  simple_table.rs  sqlparser.rs
src/sql/: format.rs  lexer.rs  mod.rs  parser.rs
src/wire/: adapter.rs  bytes_helpers.rs  decoder.rs  error.rs  impls_maxwell.rs  impls_pg_walstream.rs  impls_wal2json.rs  json_helpers.rs  sealed.rs  source.rs  type_map.rs  uuid_helpers.rs  wire_type.rs
tests/: apply_changeset.rs  bit_parity.rs  builder_api_parity.rs  cross_format_equivalence.rs  decoder_bool.rs  decoder_bytes.rs  decoder_decimal.rs  decoder_defaults.rs  decoder_edge_cases.rs  decoder_int.rs  decoder_json.rs  decoder_real.rs  decoder_temporal.rs  decoder_text.rs  decoder_uuid.rs  diesel_changeset.rs  diesel_patchset.rs  differential_smoke.rs  digestion_maxwell.rs  digestion_pg_walstream.rs  digestion_wal2json.rs  empty_table_behavior.rs  fuzz_regression.rs  phase_00_wire_scaffold.rs  phase_01_bool.rs  phase_02_int.rs  phase_03_real.rs  phase_04_text.rs  phase_05_bytes.rs  phase_06_uuid.rs  phase_07_decimal.rs  phase_08_temporal.rs  phase_09_json.rs  phase_10_cross_format_equivalence.rs  phase_10_wire_fuzz_smoke.rs  reverse.rs  session_output_parser_roundtrip.rs  sql_parsing.rs  wal2json_pg_walstream_equivalence.rs  wire_scaffold.rs
tests/crash_inputs/apply_roundtrip/: SIGABRT.PC.7ffff7c9eb2c.STACK.c461c8e5d.CODE.-6.ADDR.0.INSTR.mov____%eax,%r14d.fuzz
tests/crash_inputs/differential/: SIGABRT.PC.7ffff7c9eb2c.STACK.1af1a4a234.CODE.-6.ADDR.0.INSTR.mov____%eax,%r14d.fuzz  SIGABRT.PC.7ffff7c9eb2c.STACK.1b6c968633.CODE.-6.ADDR.0.INSTR.mov____%eax,%r14d.fuzz  SIGABRT.PC.7ffff7c9eb2c.STACK.b79b7e03.CODE.-6.ADDR.0.INSTR.mov____%eax,%r14d.fuzz  SIGABRT.PC.7ffff7c9eb2c.STACK.d007ae462.CODE.-6.ADDR.0.INSTR.mov____%eax,%r14d.fuzz  SIGABRT.PC.7ffff7c9eb2c.STACK.e7a87ae69.CODE.-6.ADDR.0.INSTR.mov____%eax,%r14d.fuzz  SIGSEGV.PC.555555f55101.STACK.c3cce091b.CODE.1.ADDR.7fffff7fecf8.INSTR.movq___$0x0,(%rsp).fuzz  SIGSEGV.PC.555555f55101.STACK.e46d92f50.CODE.1.ADDR.7fffff7fe138.INSTR.movq___$0x0,(%rsp).fuzz  SIGSEGV.PC.555555f55101.STACK.e46d92f50.CODE.1.ADDR.7fffff7fe148.INSTR.movq___$0x0,(%rsp).fuzz  SIGSEGV.PC.555555f8eb61.STACK.c7d5236b8.CODE.1.ADDR.7fffff7fe248.INSTR.movq___$0x0,(%rsp).fuzz  SIGSEGV.PC.555556019d61.STACK.d64c73db4.CODE.1.ADDR.7fffff7feef8.INSTR.mov____%rdi,0x8(%rsp).fuzz
tests/crash_inputs/roundtrip/: SIGABRT.PC.7ffff7c9eb2c.STACK.1a788a3efa.CODE.-6.ADDR.0.INSTR.mov____%eax,%r14d.fuzz  SIGABRT.PC.7ffff7c9eb2c.STACK.1af5498173.CODE.-6.ADDR.0.INSTR.mov____%eax,%r14d.fuzz  (+7 more)
(+3 files in other folders)
