[package]
name = "web-demo"
version = "0.1.0"
edition = "2024"
publish = false
description = "Serverless peer-to-peer chat demo for sqlite-diff-rs"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
dioxus-free-icons = { version = "0.10", features = ["font-awesome-solid"] }
sqlite-diff-rs = { path = "../.." }
diesel = { git = "https://github.com/diesel-rs/diesel", features = ["sqlite"] }
diesel-sqlite-session = { git = "https://github.com/LucaCappelletti94/diesel-sqlite-session" }
uuid = { version = "1", features = ["v4", "js"] }
js-sys = "0.3"
hex = "0.4"
getrandom = { version = "0.4", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
base64 = "0.22"
miniz_oxide = "0.8"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Document",
    "Storage",
    "MessageEvent",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcPeerConnection",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelType",
    "RtcDataChannelInit",
    "RtcIceGatheringState",
] }
