[package]
name = "apply-bench-report"
version = "0.1.0"
edition = "2024"
publish = false

[lints.rust]
dead_code = "allow"

[lints.clippy]
type_complexity = "allow"
uninlined_format_args = "allow"
write_literal = "allow"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series", "point_series"] }
