[package]
name = "payload-size-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
sqlite-diff-rs = { path = "../..", features = ["testing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
rmp-serde = "1"
uuid = { version = "1", features = ["v7"] }
chrono = "0.4"
csv = "1"
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series", "point_series"] }
flate2 = "1"
prost = "0.14.3"
zstd = "0.13"
lz4_flex = "0.12"
rand = "0.10"
