[package]
name = "pg-walstream-integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
sqlite-diff-rs = { path = "../..", features = ["pg-walstream"] }
pg_walstream = "0.3.0"
testcontainers = "0.27"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
serde_json = "1"
